--- a/sitio/src/css/colors.css
+++ b/sitio/src/css/colors.css
@@ -11,3 +11,19 @@
     --clicked-danger: rgb(161, 51, 51);
     --aprove-green: rgb(111, 238, 111);
 }
+
+
+/*----------  scroll toggles  ----------*/
+
+::-webkit-scrollbar{
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-thumb{
+    background: var(--cyan-clicked);
+    border-radius: 4px;
+  }
+  
+  ::-webkit-scrollbar-track{
+    background-color: var(--light-grey);
+  }
